--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,7 +9,7 @@
     
     </div>
     
-<div class="col-8">
+<div class="col-sm-8">
 
    <div class="row row-cols-1 row-cols-md-3 g-3">
     <div class="col">
