--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,14 +2,14 @@
 
 <div class="row">
   <div class="col-4">
-   <div class="col-sm-4">
+   <div class="col-md-4">
        <%= render :partial => 'menu' %>
        <%= render :partial => 'no_data' if @no_configuration_data %>
    </div>
     
     </div>
     
-<div class="col-sm-8">
+<div class="col-md-8">
 
    <div class="row row-cols-1 row-cols-md-3 g-1">
     <div class="col">
