--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="col-md-8">
 
    <div class="row row-cols-1 row-cols-md-3 g-1">
@@ -34,7 +35,7 @@
 </div>
 
 </div>
-  </div>
+
 
 <div class="row">
   <div class="col-4">
@@ -44,6 +45,7 @@
    </div>
     
     </div>
+</div>
     
 
 
