--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,41 +1,25 @@
-<div class="row">
-<div class="col-md-8">
-
-   <div class="row row-cols-1 row-cols-md-3 g-1">
-    <div class="col">
-        <!-- Card with default left text alignment -->
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
-                <a href="#" class="btn btn-primary">Know more</a>
+<div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="box">
+                    <h3>Caixa 1</h3>
+                    <p>Conteúdo da Caixa 1</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="box">
+                    <h3>Caixa 2</h3>
+                    <p>Conteúdo da Caixa 2</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="box">
+                    <h3>Caixa 3</h3>
+                    <p>Conteúdo da Caixa 3</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="col">
-        <!-- Card with center text alignment -->
-        <div class="card text-center">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
-                <a href="#" class="btn btn-primary">Know more</a>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-    <!-- Card with right text alignment -->
-        <div class="card text-end">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
-                <a href="#" class="btn btn-primary">Know more</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-</div>
-
 
 <div class="row">
   <div class="col-4">
@@ -53,8 +37,6 @@
 
 
 
-  
-</div>
 
 
 
