--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,19 +2,19 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="box">
-                    <h3>Caixa 1</h3>
-                    <p>Conteúdo da Caixa 1</p>
+                    <h3>Mensal</h3>
+                    <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="box">
-                    <h3>Caixa 2</h3>
+                    <h3>Semestral</h3>
                     <p>Conteúdo da Caixa 2</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="box">
-                    <h3>Caixa 3</h3>
+                    <h3>Anual</h3>
                     <p>Conteúdo da Caixa 3</p>
                 </div>
             </div>
