--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,26 @@
+
+  <div class="row">
+    <div class="col-4">
+       <%= render :partial => 'menu' %>
+       <%= render :partial => 'no_data' if @no_configuration_data %>
+    </div>
+    <div class="col-8">col-8</div>
+    
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="container">
         <div class="row">
             <div class="col-md-4">
