--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
   <div class="row">
     <div class="col-4">
        <%= render :partial => 'menu' %>
@@ -7,6 +7,7 @@
     <div class="col-8">col-8</div>
     
   </div>
+</div>
 
 
 
