--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="box">
-                    <h3>Mensal</h3>
+                    <h3><b>Mensal</b></h3>
                     <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
                 </div>
             </div>
