--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,45 @@
 <div class="container-xxl">
+    <div class="row">
+      <div class="col-6 col-md-4">
+
+       <%= render :partial => 'menu' %>
+       <%= render :partial => 'no_data' if @no_configuration_data %>
+          
+      </div>
+      <div class="col-md-8">
+          <div class="box">
+              <h3><b>Mensal</b></h3>
+              <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
+          </div>
+
+          <div class="box">
+              <h3><b>Mensal</b></h3>
+              <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
+          </div>
+
+          <div class="box">
+              <h3><b>Mensal</b></h3>
+              <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
+          </div>
+      </div>
+      
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container-xxl">
   
     
         <div class="row">
