--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -6,24 +6,30 @@
        <%= render :partial => 'no_data' if @no_configuration_data %>
           
       </div>
+    </div>
       <div class="col-md-8">
+        <div class="row">
           <div class="box">
               <h3><b>Mensal</b></h3>
               <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
           </div>
+        </div>
 
+       <div class="row">
           <div class="box">
               <h3><b>Mensal</b></h3>
               <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
           </div>
+       </div>
 
+       <div class="row">
           <div class="box">
               <h3><b>Mensal</b></h3>
               <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
           </div>
       </div>
-      
-    </div>
+        
+    
 </div>
 
 
