--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,29 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-4">
+      <!-- Conteúdo da coluna de largura 4 -->
+      <div class="p-3 mb-2 bg-primary text-white">Coluna 4</div>
+    </div>
+    <div class="col-8">
+      <!-- Conteúdo da coluna de largura 8 com boxes inline -->
+      <div class="d-flex">
+        <div class="p-3 mb-2 bg-secondary text-white flex-fill">Box 1</div>
+        <div class="p-3 mb-2 bg-secondary text-white flex-fill">Box 2</div>
+        <div class="p-3 mb-2 bg-secondary text-white flex-fill">Box 3</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
 <div class="container-xxl">
     <div class="row">
       <div class="col-6 col-md-4">
