--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,48 @@
 <div class="container-fluid">
   <div class="row">
+    <div class="col-4 col-4-custom">
+      <!-- Conteúdo da coluna de largura 4 (width: 18%) -->
+      <div class="p-3 mb-2 bg-primary text-white">Coluna 4 com 18% de largura</div>
+    </div>
+    <div class="col-8">
+      <!-- Conteúdo da coluna de largura 8 com boxes -->
+      <div class="row">
+        <div class="col-4">
+          <div class="card mb-3">
+            <div class="card-body">
+              <h5 class="card-title">Título do Box 1</h5>
+              <p class="card-text">Descrição do Box 1</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card mb-3">
+            <div class="card-body">
+              <h5 class="card-title">Título do Box 2</h5>
+              <p class="card-text">Descrição do Box 2</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card mb-3">
+            <div class="card-body">
+              <h5 class="card-title">Título do Box 3</h5>
+              <p class="card-text">Descrição do Box 3</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+<div class="container-fluid">
+  <div class="row">
     <div class="col-4">
       <!-- Conteúdo da coluna de largura 4 -->
       <div class="p-3 mb-2 bg-primary text-white">Coluna 4</div>
