--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,39 @@
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+
+        <div class="row">
+                    <div class="col-md-4">
+                        <div class="box">
+                            <h3><b>Mensal</b></h3>
+                            <p>Coletas de dados de ACesso,</br>SCM, SEAC,STFC</p>
+                        </div>
+                    </div>
+        
+                    <div class="col-md-4">
+                        <div class="box">
+                            <h3>Semestral</h3>
+                            <p>Conteúdo da Caixa 2</p>
+                        </div>
+                    </div>
+        
+                    <div class="col-md-4">
+                        <div class="box">
+                            <h3>Anual</h3>
+                            <p>Conteúdo da Caixa 3</p>
+                        </div>
+                    </div>
+        
+                </div>
+ 
+  </div>
+</div>
+
+
+
+
+
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-4 col-4-custom">
