--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,8 +4,8 @@
     <div class="col-md-4">
           <div class="card card-custom">
                 <div class="card-body">
-                  <h5 class="card-title">Título do Box 1</h5>
-                  <p class="card-text">Descrição do Box 1.</p>
+                  <h5 class="card-title">MENSAL</h5>
+                  <p class="card-text">SCM, SEAC, STFC</p>
                 </div>
             </div>
      </div>
@@ -14,8 +14,8 @@
     <div class="col-md-4">
           <div class="card card-custom">
             <div class="card-body">
-              <h5 class="card-title">Título do Box 2</h5>
-              <p class="card-text">Descrição do Box 2.</p>
+              <h5 class="card-title">Semestral</h5>
+              <p class="card-text"></p>
             </div>
           </div>
         </div>
@@ -23,8 +23,8 @@
         <div class="col-md-4">
           <div class="card card-custom">
             <div class="card-body">
-              <h5 class="card-title">Título do Box 3</h5>
-              <p class="card-text">Descrição do Box 3.</p>
+              <h5 class="card-title">Anual</h5>
+              <p class="card-text">.</p>
             </div>
           </div>
         </div>
