--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -24,7 +24,7 @@
           <div class="card card-custom">
             <div class="card-body">
               <h5 class="card-title">Anual</h5>
-              <p class="card-text">.</p>
+              <p class="card-text"></p>
             </div>
           </div>
         </div>
