--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -14,7 +14,7 @@
     <div class="col-md-4">
           <div class="card card-custom">
             <div class="card-body">
-              <h5 class="card-title">Semestral</h5>
+              <h5 class="card-title">SEMESTRAL</h5>
               <p class="card-text"></p>
             </div>
           </div>
@@ -23,7 +23,7 @@
         <div class="col-md-4">
           <div class="card card-custom">
             <div class="card-body">
-              <h5 class="card-title">Anual</h5>
+              <h5 class="card-title">ANUAL</h5>
               <p class="card-text"></p>
             </div>
           </div>
