--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -31,8 +31,12 @@
   </div>
 
  <div class="row">
-    <div class="col-4">col-4</div>
-    <div class="col-8">col-8</div>
+    <div class="col-4">
+       <h5 class="card-title">menu</h5>
+       <%= render :partial => 'menu' %>
+       <%= render :partial => 'no_data' if @no_configuration_data %>
+    </div>
+    <div class="col-8">coletas</div>
  </div>
 
 
