--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -15,7 +15,7 @@
           <div class="card card-custom">
             <div class="card-body">
               <h5 class="card-title">SEMESTRAL</h5>
-              <p class="card-text"></p>
+              <p class="card-text">Coleta de dados Econômicos-<br/>financeiros e Técnicos-operacionais</p>
             </div>
           </div>
         </div>
@@ -24,7 +24,7 @@
           <div class="card card-custom">
             <div class="card-body">
               <h5 class="card-title">ANUAL</h5>
-              <p class="card-text"></p>
+              <p class="card-text">Coleta de dadps de Infraestrutura de<br/>Transporte</p>
             </div>
           </div>
         </div>
@@ -36,7 +36,7 @@
        <%= render :partial => 'menu' %>
        <%= render :partial => 'no_data' if @no_configuration_data %>
     </div>
-    <div class="col-8">coletas</div>
+    <div class="col-8"><h5 class="card-title">Coletas</h5></div>
  </div>
 
 
