--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -5,7 +5,7 @@
           <div class="card card-custom">
                 <div class="card-body">
                   <h5 class="card-title">MENSAL</h5>
-                  <p class="card-text">SCM, SEAC, STFC</p>
+                  <p class="card-text">SCM, SEAC, STFC<br/></p>
                 </div>
             </div>
      </div>
@@ -36,7 +36,7 @@
        <%= render :partial => 'menu' %>
        <%= render :partial => 'no_data' if @no_configuration_data %>
     </div>
-    <div class="col-8"><h5 class="card-title">Coletas</h5></div>
+    <div class="col-8"><br/><h5 class="card-title">Coletas</h5></div>
  </div>
 
 
