--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -5,7 +5,7 @@
           <div class="card card-custom">
                 <div class="card-body">
                   <h5 class="card-title">MENSAL</h5>
-                  <p class="card-text">SCM, SEAC, STFC<br/></p>
+                  <p class="card-text">SCM, SEAC, STFC<br/><br/></p>
                 </div>
             </div>
      </div>
@@ -29,7 +29,7 @@
           </div>
         </div>
   </div>
-
+<p></p>
  <div class="row">
     <div class="col-4">
        <h5 class="card-title">menu</h5>
