--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -32,7 +32,7 @@
 <p></p>
  <div class="row">
     <div class="col-4">
-       <h5 class="card-title">menu</h5>
+       <br/><h5 class="card-title">Menu</h5>
        <%= render :partial => 'menu' %>
        <%= render :partial => 'no_data' if @no_configuration_data %>
     </div>
