--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -6,6 +6,7 @@
                 <div class="card-body">
                   <h5 class="card-title">MENSAL</h5>
                   <p class="card-text">SCM, SEAC, STFC<br/><br/></p>
+                  <p><a class="link-opacity-100-hover" href="#">Link hover opacity 100</a></p>
                 </div>
             </div>
      </div>
@@ -16,6 +17,7 @@
             <div class="card-body">
               <h5 class="card-title">SEMESTRAL</h5>
               <p class="card-text">Coleta de dados Econômicos-<br/>financeiros e Técnicos-operacionais</p>
+              <p><a class="link-opacity-100-hover" href="#">Link hover opacity 100</a></p>
             </div>
           </div>
         </div>
@@ -25,6 +27,7 @@
             <div class="card-body">
               <h5 class="card-title">ANUAL</h5>
               <p class="card-text">Coleta de dadps de Infraestrutura de<br/>Transporte</p>
+              <p><a class="link-opacity-100-hover" href="#">Link hover opacity 100</a></p>
             </div>
           </div>
         </div>
