--- a/app/views/coleta_mensal/index.html.erb
+++ b/app/views/coleta_mensal/index.html.erb
@@ -1,1 +1,25 @@
-<h2>ColetaMensalController#index</h2>
+<h2>Coleta Mensal</h2>
+<h3>Ativos</h3>
+
+<table class="table">
+  <thead>
+    ...
+  </thead>
+  <tbody>
+    <tr class="table-active">
+      ...
+    </tr>
+    <tr>
+      ...
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td  class="table-active">Larry the Bird</td>
+      <td>Pendente</td>
+      <td>Maio 2024</td>
+      <td>Data Limite: 01/06/2024</td>
+      <td>Ver coleta></td>
+
+    </tr>
+  </tbody>
+</table>
