--- a/app/views/coleta_mensal/index.html.erb
+++ b/app/views/coleta_mensal/index.html.erb
@@ -13,12 +13,12 @@
       ...
     </tr>
     <tr>
-      <th scope="row">3</th>
+      <th scope="row" class="table-active">3</th>
       <td  class="table-active">Larry the Bird</td>
-      <td>Pendente</td>
-      <td>Maio 2024</td>
-      <td>Data Limite: 01/06/2024</td>
-      <td>Ver coleta></td>
+      <td class="table-active">Pendente</td>
+      <td class="table-active">Maio 2024</td>
+      <td class="table-active">Data Limite: 01/06/2024</td>
+      <td class="table-active">Ver coleta></td>
 
     </tr>
   </tbody>
