--- a/app/views/coleta_mensal/index.html.erb
+++ b/app/views/coleta_mensal/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Coleta Mensal</h2>
+<h2><b>Coleta Mensal</b></h2>
 <h3>Ativos</h3>
 
 <table class="table">
@@ -6,12 +6,7 @@
     ...
   </thead>
   <tbody>
-    <tr class="table-active">
-      ...
-    </tr>
-    <tr>
-      ...
-    </tr>
+
     <tr>
       <th scope="row" class="table-active">3</th>
       <td  class="table-active">Larry the Bird</td>
