--- a/app/views/coleta_mensal/index.html.erb
+++ b/app/views/coleta_mensal/index.html.erb
@@ -2,12 +2,11 @@
 <h3>Ativos</h3>
 
 <table class="table">
-  <thead>
-    ...
-  </thead>
+ 
   <tbody>
 
     <tr>
+      <td class="table-active"><b>Coleta mensal</b></td>
       <td class="table-active">Pendente</td>
       <td class="table-active">Maio 2024</td>
       <td class="table-active">Data Limite: 01/06/2024</td>
