--- a/app/views/coleta_mensal/index.html.erb
+++ b/app/views/coleta_mensal/index.html.erb
@@ -17,3 +17,18 @@
 </table>
 <br/><br/>
 <h4>  Feitas</h4>
+
+<table class="table">
+ 
+  <tbody>
+
+    <tr>
+      <td class="table-active"><b>Coleta mensal</b></td>
+      <td class="table-active">Validada</td>
+      <td class="table-active">Maio 2024</td>
+      <td class="table-active">Data Limite: 01/06/2024</td>
+      <td class="table-active">Ver coleta></td>
+
+    </tr>
+  </tbody>
+</table>
