--- a/app/views/coleta_mensal/index.html.erb
+++ b/app/views/coleta_mensal/index.html.erb
@@ -10,7 +10,7 @@
       <td class="table-active">Pendente</td>
       <td class="table-active">Maio 2024</td>
       <td class="table-active">Data Limite: 01/06/2024</td>
-      <td class="table-active">Ver coleta></td>
+      <td class="table-active"><p><a href="#" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Ver coleta ></a></p></td>
 
     </tr>
   </tbody>
@@ -27,7 +27,7 @@
       <td class="table-active">Validada</td>
       <td class="table-active">Maio 2024</td>
       <td class="table-active">Data Limite: 01/06/2024</td>
-      <td class="table-active">Ver coleta></td>
+      <td class="table-active"><p><a href="#" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Ver coleta ></a></p></td>
 
     </tr>
   </tbody>
