--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,28 @@
 <h2>Início</h2>
 
+
+<div class="container">
+    <div class="box">
+      <div class="box-title">Título 1</div>
+      <div class="box-text">Texto descritivo da primeira caixa. Informações adicionais podem ser incluídas aqui.</div>
+      <a href="#" class="box-link">Link de acesso 1</a>
+    </div>
+    <div class="box">
+      <div class="box-title">Título 2</div>
+      <div class="box-text">Texto descritivo da segunda caixa. Informações adicionais podem ser incluídas aqui.</div>
+      <a href="#" class="box-link">Link de acesso 2</a>
+    </div>
+    <div class="box">
+      <div class="box-title">Título 3</div>
+      <div class="box-text">Texto descritivo da terceira caixa. Informações adicionais podem ser incluídas aqui.</div>
+      <a href="#" class="box-link">Link de acesso 3</a>
+    </div>
+  </div>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
 <div id="admin-index">
   <%= render :partial => 'no_data' if @no_configuration_data %>
   <%= render :partial => 'menu' %>
