--- a/app/views/admin/index_cliente.html.erb
+++ b/app/views/admin/index_cliente.html.erb
@@ -2,23 +2,23 @@
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">Título 1</div>
-                    <div class="box-description">Esta é a descrição da primeira caixa.</div>
-                    <a href="#" class="box-link">Acessar link</a>
+                    <div class="box-title">MENSAL</div>
+                    <div class="box-description">Coleta de dados de acessos:<br/>SCM, SEAC, STFC</div>
+                    <a href="#" class="box-link">Fazer coletas</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">Título 2</div>
-                    <div class="box-description">Esta é a descrição da segunda caixa.</div>
-                    <a href="#" class="box-link">Acessar link</a>
+                    <div class="box-title">SEMESTRAL</div>
+                    <div class="box-description">Coleta de dados Econômicos-financeiros e Técnico-operacionais</div>
+                    <a href="#" class="box-link">Fazer coletas</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">Título 3</div>
-                    <div class="box-description">Esta é a descrição da terceira caixa.</div>
-                    <a href="#" class="box-link">Acessar link</a>
+                    <div class="box-title">ANUAL</div>
+                    <div class="box-description">Coleta de dados de Infraestrutura de Transporte</div>
+                    <a href="#" class="box-link">Fazer coletas</a>
                 </div>
             </div>
         </div>
