--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -17,7 +17,7 @@
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">ANUAL</div>
-                    <div class="box-description">Coleta de dados de Infraestrutura de Transporte</div>
+                    <div class="box-description">Coleta de dados de Infraestrutura de Transporte<br/></div>
                     <a href="#" class="box-link">Fazer coletas</a>
                 </div>
             </div>
