--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -23,3 +23,40 @@
             </div>
         </div>
     </div>
+
+<div class="container mt-5">
+        <table class="table table-custom">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Coleta</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Data (mês e ano)</th>
+                    <th scope="col">Formulário</th>
+                    <th scope="col">Tipo Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Coleta 1</td>
+                    <td>Em andamento</td>
+                    <td>Julho 2024</td>
+                    <td>Formulário A</td>
+                    <td>Ação X</td>
+                </tr>
+                <tr>
+                    <td>Coleta 2</td>
+                    <td>Concluído</td>
+                    <td>Junho 2024</td>
+                    <td>Formulário B</td>
+                    <td>Ação Y</td>
+                </tr>
+                <tr>
+                    <td>Coleta 3</td>
+                    <td>Pendente</td>
+                    <td>Maio 2024</td>
+                    <td>Formulário C</td>
+                    <td>Ação Z</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
