--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -25,37 +25,42 @@
     </div>
 
 <div class="container mt-5">
+     <div class="box-title">COLETAS <BR/></div>
         <table class="table table-custom">
             <thead class="thead-light">
                 <tr>
                     <th scope="col">Coleta</th>
                     <th scope="col">Status</th>
-                    <th scope="col">Data (mês e ano)</th>
+                    <th scope="col">Data</th>
                     <th scope="col">Formulário</th>
-                    <th scope="col">Tipo Ação</th>
+                    <th scope="col">Tipo</th>
+                    <th scope="col">Ação</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Coleta 1</td>
-                    <td>Em andamento</td>
+                    <td>1</td>
+                    <td>Atrasada</td>
                     <td>Julho 2024</td>
-                    <td>Formulário A</td>
-                    <td>Ação X</td>
+                    <td>Mensal</td>
+                    <td>SCM</td>
+                    <td><a href="#" class="box-link">Fazer coleta</a></td>
                 </tr>
                 <tr>
-                    <td>Coleta 2</td>
-                    <td>Concluído</td>
+                    <td>2</td>
+                    <td>Feita</td>
                     <td>Junho 2024</td>
-                    <td>Formulário B</td>
-                    <td>Ação Y</td>
+                    <td>Semestral</td>
+                    <td></td>
+                    <td><a href="#" class="box-link">Ver coleta</a></td>
                 </tr>
                 <tr>
-                    <td>Coleta 3</td>
-                    <td>Pendente</td>
-                    <td>Maio 2024</td>
-                    <td>Formulário C</td>
-                    <td>Ação Z</td>
+                    <td>3</td>
+                    <td>A Fazer</td>
+                    <td>Agosto 2024</td>
+                    <td>Anual</td>
+                    <td>Estação</td>
+                    <td>Estação</td>
                 </tr>
             </tbody>
         </table>
