--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -44,7 +44,7 @@
                     <td>Julho 2024</td>
                     <td>Mensal</td>
                     <td>SCM</td>
-                    <td><a href="#" class="box-link">Fazer coleta</a></td>
+                    <td>Fazer coleta</td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -52,7 +52,7 @@
                     <td>Junho 2024</td>
                     <td>Semestral</td>
                     <td></td>
-                    <td><a href="#" class="box-link">Ver coleta</a></td>
+                    <td>Ver coleta</td>
                 </tr>
                 <tr>
                     <td>3</td>
@@ -60,7 +60,7 @@
                     <td>Agosto 2024</td>
                     <td>Anual</td>
                     <td>Estação</td>
-                    <td>Estação</td>
+                    <td>Fazer coleta</td>
                 </tr>
             </tbody>
         </table>
