--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -45,7 +45,7 @@
                     <td>Julho 2024</td>
                     <td>Mensal</td>
                     <td>SCM</td>
-                    <td>Fazer coleta</td>
+                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="box-link">Fazer coletas</a></td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -53,7 +53,7 @@
                     <td>Junho 2024</td>
                     <td>Semestral</td>
                     <td></td>
-                    <td>Ver coleta</td>
+                    <td><a href="#" class="box-link">Ver coletas</a></td>
                 </tr>
                 <tr>
                     <td>3</td>
@@ -61,8 +61,9 @@
                     <td>Agosto 2024</td>
                     <td>Anual</td>
                     <td>Estação</td>
-                    <td>Fazer coleta</td>
+                    <td><a href="#" class="box-link">Fazer coletas</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
+http://201.76.43.189:88/cliente/mensal
