--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -45,7 +45,8 @@
                     <td>Julho 2024</td>
                     <td>Mensal</td>
                     <td>SCM</td>
-                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="box-link">Fazer coletas</a></td>
+                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="btn btn-primary">Fazer coleta</a></td>
+                        
                 </tr>
                 <tr>
                     <td>2</td>
@@ -53,7 +54,7 @@
                     <td>Junho 2024</td>
                     <td>Semestral</td>
                     <td></td>
-                    <td><a href="#" class="box-link">Ver coletas</a></td>
+                    <td><a href="#" class="btn btn-primary">Ver coleta</a></td>
                 </tr>
                 <tr>
                     <td>3</td>
@@ -61,7 +62,7 @@
                     <td>Agosto 2024</td>
                     <td>Anual</td>
                     <td>Estação</td>
-                    <td><a href="#" class="box-link">Fazer coletas</a></td>
+                    <td><a href="#" class="btn btn-primary">Fazer coleta</a></td>
                 </tr>
             </tbody>
         </table>
