--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -45,7 +45,9 @@
                     <td>Julho 2024</td>
                     <td>Mensal</td>
                     <td>SCM</td>
-                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="btn btn-primary">Fazer coleta</a></td>
+                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="btn btn-sm btn-dark">Fazer coleta</a></td>
+                </tr>
+               </td>
                         
                 </tr>
                 <tr>
@@ -54,7 +56,9 @@
                     <td>Junho 2024</td>
                     <td>Semestral</td>
                     <td></td>
-                    <td><a href="#" class="btn btn-primary">Ver coleta</a></td>
+                    <td><a href="#" class="btn btn-sm btn-dark">Ver coleta</a></td>
+                </tr>
+                </td>
                 </tr>
                 <tr>
                     <td>3</td>
@@ -62,7 +66,9 @@
                     <td>Agosto 2024</td>
                     <td>Anual</td>
                     <td>Estação</td>
-                    <td><a href="#" class="btn btn-primary">Fazer coleta</a></td>
+                    <td><a href="#" class="btn btn-sm btn-dark">Fazer coleta</a></td>
+                </tr>
+                </td>
                 </tr>
             </tbody>
         </table>
