--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -57,7 +57,7 @@
                     <td>Junho 2024</td>
                     <td>Semestral</td>
                     <td></td>
-                    <td><a href="#" class="btn btn-sm btn-dark">Ver coleta</a></td>
+                    <td><a href="#" class="btn btn-sm btn-custom">Ver coleta</a></td>
                 </tr>
                 </td>
                 </tr>
