--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -45,7 +45,7 @@
                     <td>Julho 2024</td>
                     <td>Mensal</td>
                     <td>SCM</td>
-                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="btn btn-sm btn-dark">Fazer coleta</a> </td>
+                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
 
                 </tr>
                </td>
@@ -67,7 +67,7 @@
                     <td>Agosto 2024</td>
                     <td>Anual</td>
                     <td>Estação</td>
-                    <td><a href="#" class="btn btn-sm btn-dark">Fazer coleta</a></td>
+                    <td><a href="#" class="btn btn-sm btn-custom">Fazer coleta</a></td>
                 </tr>
                 </td>
                 </tr>
