--- a/app/views/cliente/index_analista.html.erb
+++ b/app/views/cliente/index_analista.html.erb
@@ -1,5 +1,7 @@
 <h2><b>Início</b></h2>
 
+<h3>Coletas</h3>
+
  <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="custom-box">
