--- a/app/views/cliente/index_analista.html.erb
+++ b/app/views/cliente/index_analista.html.erb
@@ -1,6 +1,6 @@
 <h2><b>Início</b></h2>
 
-<h3>Coletas</h3>
+<h3>Clientes</h3>
 
  <div class="row justify-content-center">
             <div class="col-md-4">
