--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -20,3 +20,22 @@
         </div>
       </div>
 </div>
+
+
+
+<div class="container mt-5">
+        <div class="box-custom d-flex flex-wrap align-items-center">
+            <div class="mr-3">
+                <label for="cnpj" class="mr-2">CNPJ:</label>
+                <input type="text" class="form-control d-inline-block w-auto" id="cnpj" placeholder="Digite o CNPJ">
+            </div>
+            <div class="mr-3">
+                <label for="uf" class="mr-2">UF:</label>
+                <input type="text" class="form-control d-inline-block w-auto" id="uf" placeholder="Digite a UF">
+            </div>
+            <div>
+                <label for="servicos" class="mr-2">Serviços de telecom:</label>
+                <input type="text" class="form-control d-inline-block w-auto" id="servicos" placeholder="Digite os serviços de telecom">
+            </div>
+        </div>
+    </div>
