--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -24,18 +24,20 @@
 
 
 <div class="container mt-5">
-        <div class="box-custom d-flex flex-wrap align-items-center">
-            <div class="mr-3">
-                <label for="cnpj" class="mr-2">CNPJ:</label>
-                <input type="text" class="form-control d-inline-block w-auto" id="cnpj" placeholder="Digite o CNPJ">
-            </div>
-            <div class="mr-3">
-                <label for="uf" class="mr-2">UF:</label>
-                <input type="text" class="form-control d-inline-block w-auto" id="uf" placeholder="Digite a UF">
-            </div>
-            <div>
-                <label for="servicos" class="mr-2">Serviços de telecom:</label>
-                <input type="text" class="form-control d-inline-block w-auto" id="servicos" placeholder="Digite os serviços de telecom">
+        <div class="card">
+            <div class="card-body d-flex">
+                <div class="me-3">
+                    <strong>Nome:</strong> João Silva
+                </div>
+                <div class="me-3">
+                    <strong>Email:</strong> joao.silva@example.com
+                </div>
+                <div class="me-3">
+                    <strong>Telefone:</strong> (11) 98765-4321
+                </div>
+                <div>
+                    <strong>Endereço:</strong> Rua das Flores, 123, São Paulo
+                </div>
             </div>
         </div>
     </div>
