--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -24,19 +24,21 @@
 
 
 <div class="container mt-5">
+        <h2><strong>TIM</strong></h2><br/>
+        <h3><strong>Dados da Empresa
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
-                    <strong>Nome:</strong> João Silva
+                    <strong>Cnpj:</strong> 11.111.111/0001-11
                 </div>
                 <div class="me-3">
-                    <strong>Email:</strong> joao.silva@example.com
+                    <strong>Uf:</strong> DF
                 </div>
                 <div class="me-3">
-                    <strong>Telefone:</strong> (11) 98765-4321
+                    <strong>Serviços de Telecom:</strong> SCM - Serviço de Comunicação Multimídia<br/>SEAC - TV por Assinatura<br/> STFC - Serviço Telefônico Fixo Comutado 
                 </div>
                 <div>
-                    <strong>Endereço:</strong> Rua das Flores, 123, São Paulo
+                    
                 </div>
             </div>
         </div>
