--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -25,7 +25,7 @@
 
 <div class="container mt-5">
         <h2><strong>TIM</strong></h2><br/>
-        <h3><strong>Dados da Empresa
+        <h4><strong>Dados da Empresa</strong></h4>
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
