--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -14,7 +14,7 @@
                     <strong>Uf:</strong> DF
                 </div>
                 <div class="me-3">
-                    <strong>Serviços de Telecom:</strong> SCM - Serviço de Comunicação Multimídia<br/>SEAC - TV por Assinatura<br/> STFC - Serviço Telefônico Fixo Comutado 
+                    <strong>Serviços de Telecom:</strong> SCM - Serviço de Comunicação Multimídia, SEAC - TV por Assinatura, STFC - Serviço Telefônico Fixo Comutado 
                 </div>
                
             </div>
