--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -20,3 +20,22 @@
             </div>
         </div>
     </div>
+    <div class="container mt-5">
+       <h3><strong>Dados do Responsável pelo Preenchimento dos Formulários</strong></h3>
+        <div class="card">
+            <div class="card-body d-flex">
+                <div class="me-3">
+                    <strong>Cnpj:</strong> João Silva
+                </div>
+                <div class="me-3">
+                    <strong>Ufl:</strong> joao.silva@example.com
+                </div>
+                <div class="me-3">
+                    <strong>Telefone:</strong> (11) 98765-4321
+                </div>
+                <div>
+                    <strong>Endereço:</strong> Rua das Flores, 123, São Paulo
+                </div>
+            </div>
+        </div>
+    </div>
