--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -34,7 +34,7 @@
                     <strong>Telefone:</strong> (11) 98765-4321
                 </div>
                 <div>
-                    <strong>Endereço:</strong> Rua das Flores, 123, São Paulo
+                    <strong>Endereço:</strong> Rua das Flores, 123, São Paulo<br/><br/>
                 </div>
             </div>
         </div>
