--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -25,16 +25,16 @@
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
-                    <strong>Cnpj:</strong> João Silva
+                    <strong>Nome:</strong> João 
                 </div>
                 <div class="me-3">
-                    <strong>Ufl:</strong> joao.silva@example.com
+                    <strong>Sobrenome:</strong> Silva
                 </div>
                 <div class="me-3">
-                    <strong>Telefone:</strong> (11) 98765-4321
+                    <strong>Email:</strong> joao.silva@example.com
                 </div>
                 <div>
-                    <strong>Endereço:</strong> Rua das Flores, 123, São Paulo<br/><br/>
+                    <strong>Telefone:</strong> (61) 98765-4321<br/><br/>
                 </div>
             </div>
         </div>
