--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -21,6 +21,26 @@
         </div>
     </div>
     <div class="container mt-5">
+       <h3><strong>Dados do Responsável da Empresa</strong></h3>
+        <div class="card">
+            <div class="card-body d-flex">
+                <div class="me-3">
+                    <strong>Nome:</strong> João 
+                </div>
+                <div class="me-3">
+                    <strong>Sobrenome:</strong> Silva
+                </div>
+                <div class="me-3">
+                    <strong>Email:</strong> joao.silva@example.com
+                </div>
+                <div>
+                    <strong>Telefone:</strong> (61) 98765-4321<br/><br/>
+                </div>
+            </div>
+        </div>
+    </div>
+
+       <div class="container mt-5">
        <h3><strong>Dados do Responsável pelo Preenchimento dos Formulários</strong></h3>
         <div class="card">
             <div class="card-body d-flex">
@@ -38,4 +58,54 @@
                 </div>
             </div>
         </div>
+    </div>
+
+<div class="container mt-5">
+     <div class="box-title">COLETAS <BR/></div>
+        <table class="table table-custom">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Coleta</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Data</th>
+                    <th scope="col">Formulário</th>
+                    <th scope="col">Tipo</th>
+                    <th scope="col">Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Atrasada</td>
+                    <td>Julho 2024</td>
+                    <td>Mensal</td>
+                    <td>SCM</td>
+                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
+
+                </tr>
+               </td>
+                        
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Feita</td>
+                    <td>Junho 2024</td>
+                    <td>Semestral</td>
+                    <td></td>
+                    <td><a href="#" class="btn btn-sm btn-custom">Ver coleta</a></td>
+                </tr>
+                </td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>A Fazer</td>
+                    <td>Agosto 2024</td>
+                    <td>Anual</td>
+                    <td>Estação</td>
+                    <td><a href="#" class="btn btn-sm btn-custom">Fazer coleta</a></td>
+                </tr>
+                </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
