--- a/app/views/cliente/index_analista.html.erb
+++ b/app/views/cliente/index_analista.html.erb
@@ -8,6 +8,7 @@
                     <div class="box-title">TIM</div>
                     <div class="box-description"><span class="badge bg-danger">Coleta atrasada</span></div>
                     <p><b>Responsável: João Carlos</b></p>
+                    <a href="http://201.76.43.189:88/cliente/cliente_analista" class="box-link">
                 </div>
             </div>
             <div class="col-md-4">
@@ -15,6 +16,7 @@
                     <div class="box-title">ORGANIZAÇÃO TESTE</div>
                     <div class="box-description"><span class="badge bg-success">Coleta recebida</span></div>
                     <p><b>Responsável: Luana Silva</b></p>
+                    <a href="#" class="box-link">
                 </div>
             </div>
             <div class="col-md-4">
@@ -22,6 +24,7 @@
                     <div class="box-title">GLOBALCOM</div>
                     <div class="box-description"><span class="badge bg-success">Coleta recebida</span></div>
                     <p><b>Responsável: Luana Silva</b></p>
+                    <a href="#" class="box-link">
                 </div>
             </div>
         </div>
