--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -41,7 +41,7 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>Atrasada</td>
+                    <td><span class="badge bg-danger">Atrasada</span></td>
                     <td>Julho 2024</td>
                     <td>Mensal</td>
                     <td>SCM</td>
@@ -53,7 +53,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Feita</td>
+                    <td><span class="badge bg-success">Feita</span></td>
                     <td>Junho 2024</td>
                     <td>Semestral</td>
                     <td></td>
@@ -63,7 +63,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>A Fazer</td>
+                    <td><span class="badge bg-primary">A Fazer</span></td>
                     <td>Agosto 2024</td>
                     <td>Anual</td>
                     <td>Estação</td>
