--- a/app/views/cliente/formulario_semestral.html.erb
+++ b/app/views/cliente/formulario_semestral.html.erb
@@ -1,4 +1,32 @@
+
  <div class="container mt-5">
+        <div class="row g-2">
+  <div class="col-md">
+    <div class="form-floating">
+      <input type="text" class="form-control" id="floatingInputGrid" placeholder="UF" value="uf">
+      <label for="floatingInputGrid">uf</label>
+    </div>
+  </div>
+    <div class="col-md">
+    <div class="form-floating">
+      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Cidade" value="cidade">
+      <label for="floatingInputGrid">Cidade</label>
+    </div>
+  </div>
+  <div class="col-md">
+    <div class="form-floating">
+      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Cliente" value="tipodecliente">
+      <label for="floatingInputGrid">Tipo de cliente</label>
+    </div>
+  </div>
+
+
+
+
+
+
+
+<div class="container mt-5">
         <div class="row g-2">
   <div class="col-md">
     <div class="form-floating">
