--- a/app/views/cliente/formulario_semestral.html.erb
+++ b/app/views/cliente/formulario_semestral.html.erb
@@ -18,6 +18,11 @@
       <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Cliente" value="tipodecliente">
       <label for="floatingInputGrid">Tipo de cliente</label>
     </div>
+   <div class="col-md">
+    <div class="form-floating">
+      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Cliente" value="tipodecliente">
+      <label for="floatingInputGrid">Tipo de cliente</label>
+    </div>
   </div>
 
 
