--- a/app/views/cliente/formulario_semestral.html.erb
+++ b/app/views/cliente/formulario_semestral.html.erb
@@ -1,111 +1,74 @@
-
  <div class="container mt-5">
-        <div class="row g-2">
-  <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="UF" value="uf">
-      <label for="floatingInputGrid">uf</label>
-    </div>
-  </div>
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Cidade" value="cidade">
-      <label for="floatingInputGrid">Cidade</label>
-    </div>
-  </div>
-  <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Cliente" value="tipodecliente">
-      <label for="floatingInputGrid">Tipo de cliente</label>
-    </div>
-   <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Cliente" value="tipodecliente">
-      <label for="floatingInputGrid">Tipo de cliente</label>
-    </div>
-  </div>
+        <div class="card">
+            <div class="card-header bg-primary text-white">
+                <h4 class="mb-0">Cadastro de Informações</h4>
+            </div>
+            <div class="card-body">
+                <form>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="uf" class="form-label">UF</label>
+                            <select id="uf" class="form-select">
+                                <option selected>Escolher...</option>
+                                <option value="SP">São Paulo</option>
+                                <option value="RJ">Rio de Janeiro</option>
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="cidade" class="form-label">Cidade</label>
+                            <input type="text" class="form-control" id="cidade" placeholder="Digite a cidade">
+                        </div>
+                    </div>
 
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="tipoCliente" class="form-label">Tipo de Cliente</label>
+                            <input type="text" class="form-control" id="tipoCliente" placeholder="Digite o tipo de cliente">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="tipoAtendimento" class="form-label">Tipo de Atendimento</label>
+                            <input type="text" class="form-control" id="tipoAtendimento" placeholder="Digite o tipo de atendimento">
+                        </div>
+                    </div>
 
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="tipoMeio" class="form-label">Tipo de Meio</label>
+                            <input type="text" class="form-control" id="tipoMeio" placeholder="Digite o tipo de meio">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="tipoTecnologia" class="form-label">Tipo de Tecnologia</label>
+                            <input type="text" class="form-control" id="tipoTecnologia" placeholder="Digite o tipo de tecnologia">
+                        </div>
+                    </div>
 
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="tipoProduto" class="form-label">Tipo de Produto</label>
+                            <input type="text" class="form-control" id="tipoProduto" placeholder="Digite o tipo de produto">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="velocidade" class="form-label">Velocidade</label>
+                            <input type="text" class="form-control" id="velocidade" placeholder="Digite a velocidade">
+                        </div>
+                    </div>
 
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="quantidade" class="form-label">Quantidade</label>
+                            <input type="number" class="form-control" id="quantidade" placeholder="Digite a quantidade">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="codigoIbge" class="form-label">Código IBGE</label>
+                            <input type="text" class="form-control" id="codigoIbge" placeholder="Digite o código IBGE">
+                        </div>
+                    </div>
 
-
-
-<div class="container mt-5">
-        <div class="row g-2">
-  <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="UF" value="uf">
-      <label for="floatingInputGrid">uf</label>
+                    <div class="text-end">
+                        <button type="submit" class="btn btn-primary">Salvar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Cidade" value="cidade">
-      <label for="floatingInputGrid">Cidade</label>
-    </div>
-  </div>
-  <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Cliente" value="tipodecliente">
-      <label for="floatingInputGrid">Tipo de cliente</label>
-    </div>
-  </div>
-
-  <div class="col-md">
-    <div class="form-floating">
-      <select class="form-select" id="floatingSelectGrid" aria-label="Tipo de Atendimento">
-        <option selected>SCM</option>
-        <option value="1">SEAC</option>
-        <option value="2">STFC</option>
-        
-      </select>
-      <label for="floatingSelectGrid">Selecione o tipo</label>
-    </div>
-  </div>
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Meio" value="tipodemeio">
-      <label for="floatingInputGrid">Tipo de Meio</label>
-    </div>
-  </div>
-   <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Tecnologia" value="tipodetecnologia">
-      <label for="floatingInputGrid">Tipo de Tecnologia</label>
-    </div>
-  </div>
-  <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Produto" value="tipodeproduto">
-      <label for="floatingInputGrid">Tipo de Produto</label>
-    </div>
-  </div>
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Velocidade" value="velocidade">
-      <label for="floatingInputGrid">Velocidade</label>
-    </div>
-  </div>
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Quantidade" value="quantidade">
-      <label for="floatingInputGrid">Quantidade</label>
-    </div>
-  </div>
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Código Ibge" value="codigoibge">
-      <label for="floatingInputGrid">Código IBGE</label>
-    </div>
-  </div>
-  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">Salvar</button>
-  
-  
-  
-  
-  
-  
-  
- </div>
-</div>
