--- a/app/views/cliente/formulario_semestral.html.erb
+++ b/app/views/cliente/formulario_semestral.html.erb
@@ -1,7 +1,7 @@
  <div class="container mt-5">
 
 
-   <h3>Dados Econômicos-financeiros e Técnico-operacionais</h3>
+   <h3><strong>Dados Econômicos-financeiros e Técnico-operacionais</strong></h3><br/><br/>
        
             <div class="card-body">
                 <form>
