--- a/app/views/cliente/formulario_semestral.html.erb
+++ b/app/views/cliente/formulario_semestral.html.erb
@@ -16,54 +16,23 @@
                             </select>
                         </div>
                         <div class="col-md-6">
-                            <label for="cidade" class="form-label">Cidade</label>
+                            <label for="operacao" class="form-label">Operação</label>
                             <input type="text" class="form-control" id="cidade" placeholder="Digite a cidade">
                         </div>
                     </div>
 
                     <div class="row mb-3">
                         <div class="col-md-6">
-                            <label for="tipoCliente" class="form-label">Tipo de Cliente</label>
-                            <input type="text" class="form-control" id="tipoCliente" placeholder="Digite o tipo de cliente">
+                            <label for="valor" class="form-label">Valor</label>
+                            <input type="text" class="form-control" id="tipoCliente" placeholder="Valor">
                         </div>
                         <div class="col-md-6">
-                            <label for="tipoAtendimento" class="form-label">Tipo de Atendimento</label>
-                            <input type="text" class="form-control" id="tipoAtendimento" placeholder="Digite o tipo de atendimento">
+                            <label for="tipoServico" class="form-label">Tipo de Serviço</label>
+                            <input type="text" class="form-control" id="tipoAtendimento" placeholder="Tipo de Serviço">
                         </div>
                     </div>
 
-                    <div class="row mb-3">
-                        <div class="col-md-6">
-                            <label for="tipoMeio" class="form-label">Tipo de Meio</label>
-                            <input type="text" class="form-control" id="tipoMeio" placeholder="Digite o tipo de meio">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="tipoTecnologia" class="form-label">Tipo de Tecnologia</label>
-                            <input type="text" class="form-control" id="tipoTecnologia" placeholder="Digite o tipo de tecnologia">
-                        </div>
-                    </div>
-
-                    <div class="row mb-3">
-                        <div class="col-md-6">
-                            <label for="tipoProduto" class="form-label">Tipo de Produto</label>
-                            <input type="text" class="form-control" id="tipoProduto" placeholder="Digite o tipo de produto">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="velocidade" class="form-label">Velocidade</label>
-                            <input type="text" class="form-control" id="velocidade" placeholder="Digite a velocidade">
-                        </div>
-                    </div>
-
-                    <div class="row mb-3">
-                        <div class="col-md-6">
-                            <label for="quantidade" class="form-label">Quantidade</label>
-                            <input type="number" class="form-control" id="quantidade" placeholder="Digite a quantidade">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="codigoIbge" class="form-label">Código IBGE</label>
-                            <input type="text" class="form-control" id="codigoIbge" placeholder="Digite o código IBGE">
-                        </div>
-                    </div>
+                   
 
                     <div class="text-end">
                         <button type="submit" class="btn btn-primary">Salvar</button>
