--- a/app/views/cliente/formulario_semestral.html.erb
+++ b/app/views/cliente/formulario_semestral.html.erb
@@ -36,6 +36,7 @@
 
                     <div class="text-end">
                         <button type="submit" class="btn btn-primary">Adicionar</button>
+                     <br/><br/> <p><strong>Todos os campos são obrigatórios</strong></p>
                     </div>
                 </form>
             </div>
