--- a/app/views/cliente/formulario_mensal_seac.html.erb
+++ b/app/views/cliente/formulario_mensal_seac.html.erb
@@ -1,5 +1,7 @@
  <div class="container mt-5">
-        <div class="row g-2">
+
+<form>
+<div class="row g-2">
   <div class="col-md">
     <div class="form-floating">
       <input type="text" class="form-control" id="floatingInputGrid" placeholder="UF" value="uf">
@@ -53,7 +55,10 @@
   <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">Salvar</button>
   
   
-  
+  <div class="text-end">
+                        <button type="submit" class="btn btn-primary">Salvar</button>
+                    </div>
+ </form> 
   
   
   
