--- a/app/views/cliente/create_coleta_mensal.html.erb
+++ b/app/views/cliente/create_coleta_mensal.html.erb
@@ -4,14 +4,14 @@
                 <div class="custom-box">
                     <div class="box-title">SCM</div>
                     <div class="box-description">Serviços de comunicação Multimídia</div>
-                    <a href="#" class="box-link">Fazer coleta</a>
+                    <a href="http://201.76.43.189:88/cliente/mensal_scm" class="box-link">Fazer coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">SEAC</div>
                     <div class="box-description">Serviço de tv por assinatura</div>
-                    <a href="#" class="box-link">Fazer coleta</a>
+                    <a href="http://201.76.43.189:88/cliente/mensal_seac" class="box-link">Fazer coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
