--- a/app/views/cliente/create_coleta_mensal.html.erb
+++ b/app/views/cliente/create_coleta_mensal.html.erb
@@ -18,7 +18,7 @@
                 <div class="custom-box">
                     <div class="box-title">STFC</div>
                     <div class="box-description">Serviço Telefônico Fixo Comutado</div>
-                    <a href="#" class="box-link">Fazer coleta</a>
+                    <a href="http://201.76.43.189:88/cliente/mensal_stfc" class="box-link">Fazer coleta</a>
                 </div>
             </div>
         </div>
